tests/baselines/reference/decoratorOnInterface.errors.txt
decoratorOnInterface.ts(3,1): error TS1206: Decorators are not valid here.


==== decoratorOnInterface.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    interface I {
    }